test failure in miner-basic functional test: Unable to insert multiple values for subject `file:///home/tracker/tracker-tests/tmpywn2jwxa/test-monitored/dir1/file2.txt' and single valued property `nfo:fileSize'
At https://gitlab.gnome.org/GNOME/tracker-miners/-/jobs/1354340
Runner: #93 (d836cf30) gcc150 (donated by OSU Open Source Lab) Commit: aaf89b30
Log: (edited):
--- command ---
14:45:24 GI_TYPELIB_PATH='/builds/GNOME/tracker-miners/build/subprojects/tracker/src/libtracker-sparql' LD_LIBRARY_PATH='/builds/GNOME/tracker-miners/build/subprojects/tracker/src/libtracker-sparql:/usr/lib/libeatmydata' TRACKER_LANGUAGE_STOP_WORDS_DIR='/builds/GNOME/tracker-miners/subprojects/tracker/src/libtracker-common/stop-words' PYTHONPATH='/builds/GNOME/tracker-miners/subprojects/tracker/utils' TRACKER_FUNCTIONAL_TEST_CONFIG='/builds/GNOME/tracker-miners/build/tests/functional-tests/configuration.json' /usr/bin/python3 /builds/GNOME/tracker-miners/tests/functional-tests/miner-basic.py
--- stdout ---
# TAP results for MinerCrawlTest
ok 1 The precreated files and folders should be there
ok 2 Copy an file from unmonitored directory to monitored directory
ok 3 Copy an file from a monitored location to an unmonitored location
ok 4 Copy a file between monitored directories
ok 5 Move a file from unmonitored to monitored directory # SKIP https://gitlab.gnome.org/GNOME/tracker-miners/issues/56
ok 6 Move a file from monitored to unmonitored directory
ok 7 Move a file between monitored directories
ok 8 Delete one of the files
not ok 9 Delete a directory
...
1..10
--- stderr ---
...
(tracker-miner-fs-3:5949): Tracker-CRITICAL **: 14:45:49.496: Error executing batch: Unable to insert multiple values for subject `file:///home/tracker/tracker-tests/tmpywn2jwxa/test-monitored/dir1/file2.txt' and single valued property `nfo:fileSize' (old_value: '31', new value: '0')
Traceback (most recent call last):
File "/builds/GNOME/tracker-miners/subprojects/tracker/utils/trackertestutils/storehelper.py", line 139, in timeout_cb
raise AwaitTimeoutException(
trackertestutils.storehelper.AwaitTimeoutException: Timeout (60s) awaiting insert of resource matching: a nfo:Document; nie:isStoredAs <file:///home/tracker/tracker-tests/tmpywn2jwxa/test-monitored/dir1/file2.txt>